--- a/ProtocolBufferDemo/app/src/main/res/layout/activity_main.xml
+++ b/ProtocolBufferDemo/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hypers.www.protocolbufferdemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_build"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:gravity="center"
+        android:text="write"/>
 </RelativeLayout>
